CSS con variables de css

--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 <body>
     <header>
         <div class="container">
+          <section class="branding">
             <img src="logo.png" alt="Logo" class="logo">
             <h1>Succulent Miracle Spray</h1>
+          </section>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
