--- a/index.html
+++ b/index.html
@@ -53,6 +53,29 @@
                 </ul>
             </div>
         </section>
+        <section class="pricing">
+            <div class="card">
+                <h3>Card Heading</h3>
+                <img src="https://picsum.photos/id/301/300/200" alt="Princing Img" />
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus repudiandae velit vero error sed, eligendi enim, culpa aspernatur.</p>
+                <div class="pricetag">$100.00</div>
+                <a class="addCart" href="#">Comprar</a>
+            </div>
+            <div class="card">
+                <h3>Card Heading</h3>
+                <img src="https://picsum.photos/id/201/300/200" alt="Princing Img" />
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus repudiandae velit vero error sed, eligendi enim, culpa aspernatur.</p>
+                <div class="pricetag">$100.00</div>
+                <a class="addCart" href="#">Comprar</a>
+            </div>
+            <div class="card">
+                <h3>Card Heading</h3>
+                <img src="https://picsum.photos/id/102/300/200" alt="Princing Img" />
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus repudiandae velit vero error sed, eligendi enim, culpa aspernatur.</p>
+                <div class="pricetag">$100.00</div>
+                <a class="addCart" href="#">Comprar</a>
+            </div>
+        </section>
         <section class="call-to-action">
             <div class="container">
                 <h2>Ready to Transform Your Succulents?</h2>
