LESS Supercharges, mixins con parametros y guardas y purge css para optimizar

--- a/index.html
+++ b/index.html
@@ -43,15 +43,26 @@
             </div>
         </section>
         <section class="benefits">
-            <div class="container">
-                <h2>The Power of Our Spray</h2>
-                <ul>
+            <section class="grid">
+            <div class="row">
+                <h2 class="col-6 offset-md-2 col-md-4">The Power of Our Spray</h2>
+                <ul class="col-6  col-md-4">
                     <li>Brighter colors</li>
                     <li>Increased growth</li>
                     <li>Improved health</li>
                     <li>Long-lasting results</li>
                 </ul>
             </div>
+            <div class="row">
+                <h2 class="col-6 offset-md-2 col-md-4">The Power of Our Spray</h2>
+                <ul class="col-6  col-md-4">
+                    <li>Brighter colors</li>
+                    <li>Increased growth</li>
+                    <li>Improved health</li>
+                    <li>Long-lasting results</li>
+                </ul>
+            </div>
+        </section>
         </section>
         <section class="pricing">
             <div class="card">
