--- a/product.html
+++ b/product.html
@@ -4,28 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Succulent Miracle Spray - Product Details</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="less/main.less" type="text/css">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <img src="logo.png" alt="Logo" class="logo">
-            <h1>Succulent Miracle Spray</h1>
-            <nav>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="gallery.html">Gallery</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-                <button class="hamburger">
-                    <span></span>
-                    <span></span>
-                    <span></span>
-                </button>
-            </nav>
-        </div>
-    </header>
+    {{>header}}
 
     <main>
         <section class="product">
@@ -59,17 +41,6 @@
         </section>
     </main>
 
-    <footer>
-        <div class="container">
-            <p>© 2023 Succulent Miracle Spray. All rights reserved.</p>
-            <ul class="social">
-                <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="#"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#"><i class="fab fa-twitter"></i></a></li>
-            </ul>
-        </div>
-    </footer>
-
-    <script src="script.js"></script>
+    {{>footer}}
 </body>
 </html>
