Parciales con Parametos y con Contexto

--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Succulent Gallery</title>
     <link rel="stylesheet" href="less/main.less" type="text/css">
 </head>
+
 <body>
     {{>header}}
 
@@ -14,11 +16,13 @@
             <div class="container">
                 <h2>See the Transformation</h2>
                 <div class="grid">
-                    <div class="card">
-                        <img src="image1.jpg" alt="Succulent 1">
-                        <a href="product.html?id=1" class="button">View Details</a>
-                    </div>
-                    </div>
+                    {{#each productos}}
+                        {{>galeria/tarjeta
+                            producto = .
+                        }}
+                    {{/each}}
+                   
+                </div>
             </div>
         </section>
     </main>
@@ -26,4 +30,5 @@
     {{>footer}}
 
 </body>
+
 </html>
