--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
    {{>header}}
 
     <main>
-        <section class="hero">
-            <picture>
-                <source srcset="https://picsum.photos/id/180/1300/720" media="(min-width:1025px)"/>
-                <source srcset="https://picsum.photos/id/180/1024/640" media="(min-width:720px)"/>
-                <img src="https://picsum.photos/id/180/1300/720" alt="hero panel img"/>
-            </picture>
-            <div class="container">
-                <h2>Unlock Your Succulents' Full Potential</h2>
-                <p>Our miraculous spray transforms ordinary succulents into vibrant masterpieces.</p>
-                <a href="gallery.html" class="button">See the Results</a>
-            </div>
-        </section>
+       {{>hero}}
         <section class="benefits">
             <section class="grid">
             <div class="row">
