--- a/index.html
+++ b/index.html
@@ -62,6 +62,8 @@
                 <a href="#" class="button">Shop Now</a>
             </div>
         </section>
+
+        {{>testimonios}}
     </main>
     {{>footer}}
 </body>
